Change PHP binary name
Example: from php7.4 to php74

--- a/phpfarm/apache/sites-available/php5.3.conf
+++ b/phpfarm/apache/sites-available/php5.3.conf
@@ -15,10 +15,10 @@ Listen 8053
     </Directory>
 
 
-    FCGIWrapper /phpfarm/inst/php5.3/bin/php-cgi .php
+    FCGIWrapper /phpfarm/inst/php53/bin/php-cgi .php
     AddHandler fcgid-script .php
 
     LogLevel warn
-    ErrorLog ${APACHE_LOG_DIR}/php5.3-error.log
-    CustomLog ${APACHE_LOG_DIR}/php5.3-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/php53-error.log
+    CustomLog ${APACHE_LOG_DIR}/php53-access.log combined
 </VirtualHost>
