--- a/phpfarm/apache/sites-available/php5.6.conf
+++ b/phpfarm/apache/sites-available/php5.6.conf
@@ -15,10 +15,10 @@ Listen 8056
     </Directory>
 
 
-    FCGIWrapper /phpfarm/inst/php5.6/bin/php-cgi .php
+    FCGIWrapper /phpfarm/inst/php56/bin/php-cgi .php
     AddHandler fcgid-script .php
 
     LogLevel warn
-    ErrorLog ${APACHE_LOG_DIR}/php5.6-error.log
-    CustomLog ${APACHE_LOG_DIR}/php5.6-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/php56-error.log
+    CustomLog ${APACHE_LOG_DIR}/php56-access.log combined
 </VirtualHost>
