--- a/phpfarm/apache/sites-available/php7.3.conf
+++ b/phpfarm/apache/sites-available/php7.3.conf
@@ -15,10 +15,10 @@ Listen 8073
     </Directory>
 
 
-    FCGIWrapper /phpfarm/inst/php7.3/bin/php-cgi .php
+    FCGIWrapper /phpfarm/inst/php73/bin/php-cgi .php
     AddHandler fcgid-script .php
 
     LogLevel warn
-    ErrorLog ${APACHE_LOG_DIR}/php7.3-error.log
-    CustomLog ${APACHE_LOG_DIR}/php7.3-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/php73-error.log
+    CustomLog ${APACHE_LOG_DIR}/php73-access.log combined
 </VirtualHost>
