--- a/phpfarm/apache/sites-available/php7.4.conf
+++ b/phpfarm/apache/sites-available/php7.4.conf
@@ -15,10 +15,10 @@ Listen 8074
     </Directory>
 
 
-    FCGIWrapper /phpfarm/inst/php7.4/bin/php-cgi .php
+    FCGIWrapper /phpfarm/inst/php74/bin/php-cgi .php
     AddHandler fcgid-script .php
 
     LogLevel warn
-    ErrorLog ${APACHE_LOG_DIR}/php7.4-error.log
-    CustomLog ${APACHE_LOG_DIR}/php7.4-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/php74-error.log
+    CustomLog ${APACHE_LOG_DIR}/php74-access.log combined
 </VirtualHost>
