Fix PHP overrides

--- a/data/www/.php/99-php-overrides.ini
+++ b/data/www/.php/99-php-overrides.ini
@@ -2,9 +2,9 @@
 date.timezone = Europe/Berlin
 
 ;expose_php = On
-memory_limit = 512M;
+memory_limit = 512M
 post_max_size = 520M
-upload_max_fileseize = 128M
+upload_max_filesize = 128M
 
 max_input_time = 360
 max_input_vars = 10000
